# autovojo

./: Cargo.toml  README.md
.vim/: coc-settings.json
autovojo-common/: Cargo.toml
autovojo-common/src/: lib.rs
autovojo-ebpf/: Cargo.toml
autovojo-ebpf/src/: bindings.rs  main.rs
autovojo-userspace/: Cargo.toml  build.rs
autovojo-userspace/proto/: autovojo.proto
autovojo-userspace/src/: main.rs  server.rs
docs/: bibliography.bib  biblo2.bib  forward_xdp.puml  grpc_api.puml  grpc_flow.puml  index.md  justfile  network.puml
src/: main.rs  server.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
