[package]
name = "autovojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
env_logger = "0.9.3"
ipnet = "2.5.1"
log = "0.4.17"
prost = "0.11.2"
thiserror = "1.0.37"
tokio = {version="1.21.2", features=["full"]}
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
