[package]
name = "autovojo-userspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1.13"
autovojo-common = { path = "../autovojo-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0.27", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
ipnet = "2.5.1"
prost = "0.11.2"
thiserror = "1.0.37"
tonic = "0.8.2"
bytes = "1.3.0"
macaddr = "1.0.1"

[[bin]]
name = "autovojo"
path = "src/main.rs"


[build-dependencies]
tonic-build = "0.8.2"
